Start Thread using old good way